--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "src/assets",
+                "input": "public",
                 "output": "/assets/"
               }
             ],
@@ -92,7 +92,7 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "src/assets",
+                "input": "public",
                 "output": "/assets/"
               }
             ],
