--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@emailjs/browser": "^4.4.1",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.0.0",
